src/objects/Timesheet_Entry__c.object
<CustomObject>
    <description>Entries for Timesheets</description>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <formula>CASE(
MOD( Date__c  - DATE(1900, 1, 7), 7), 
0, &quot;Sunday&quot;, 
1, &quot;Monday&quot;, 
2, &quot;Tuesday&quot;, 
3, &quot;Wednesday&quot;, 
4, &quot;Thursday&quot;, 
5, &quot;Friday&quot;, 
6, &quot;Saturday&quot;, &quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <inlineHelpText>Enter the end of your day here.</inlineHelpText>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HOL_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Enter an holiday hours here.</inlineHelpText>
        <label>HOL Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Less_Lunch__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Enter the time you took for Lunch here.</inlineHelpText>
        <label>Less Lunch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Paid_Time_Off_Hrs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Enter any other paid time off hours here that may not apply to your allotted time off.</inlineHelpText>
        <label>Other Paid Time Off Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTO_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Enter any paid time off hours here.</inlineHelpText>
        <label>PTO Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Time_Off__c</fullName>
        <formula>PTO_Hours__c  +  HOL_Hours__c  +  Other_Paid_Time_Off_Hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total paid time off for this entry.</inlineHelpText>
        <label>Paid Time Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <inlineHelpText>Enter the start of your day here.</inlineHelpText>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <label>Timesheet</label>
        <referenceTo>Timesheet__c</referenceTo>
        <relationshipLabel>Timesheet Entries</relationshipLabel>
        <relationshipName>Timesheet_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>Worked_Hours__c  +  Paid_Time_Off__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total hours for this entry.</inlineHelpText>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Worked_Hours__c</fullName>
        <formula>(((ABS(Start__c  -  End__c)  * 1440) / 60) -  Less_Lunch__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total number of hours worked for this entry.</inlineHelpText>
        <label>Worked Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Timesheet Entry</label>
    <nameField>
        <displayFormat>TS Entry-{000000000}</displayFormat>
        <label>Timesheet Entry #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_within_Timesheet_Pay_Period</fullName>
        <active>true</active>
        <description>Timesheet Entry End must be less than or equal to Timesheet Pay Period End.</description>
        <errorConditionFormula>IF ( and ( DATEVALUE(End__c)  &lt;&gt; null,  Timesheet__r.Pay_Period_End__c  &lt;&gt;  null, DATEVALUE(End__c) &gt; Timesheet__r.Pay_Period_End__c ) , true, false)</errorConditionFormula>
        <errorDisplayField>End__c</errorDisplayField>
        <errorMessage>The End must be less than or equal to the Timesheet Pay Period End.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_cannot_be_after_the_End</fullName>
        <active>true</active>
        <description>Start must be before the End.</description>
        <errorConditionFormula>Start__c  &gt; End__c</errorConditionFormula>
        <errorDisplayField>Start__c</errorDisplayField>
        <errorMessage>The Start cannot be after the End.  Please enter a date and time prior to the End date and time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_within_Timesheet_Pay_Period</fullName>
        <active>true</active>
        <description>Timesheet Entry Start must be greater or equal than Timesheet Pay Period Start.</description>
        <errorConditionFormula>(NOT(ISNULL( DATEVALUE(Start__c) )) &amp;&amp; NOT(ISNULL( Timesheet__r.Pay_Period_Start__c  )) &amp;&amp; DATEVALUE(Start__c)&lt; Timesheet__r.Pay_Period_Start__c )</errorConditionFormula>
        <errorDisplayField>Start__c</errorDisplayField>
        <errorMessage>The Start must be greater than or equal to the Timesheet Pay Period Start.</errorMessage>
    </validationRules>
</CustomObject>